--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "html5-boilerplate": "^5.3.0",
     "imgareaselect": "^0.9.10",
     "jquery": "^2.2.4",
-    "bootstrap": "^3.3.6"
+    "bootstrap": "^3.3.6",
+    "angular-file-upload": "^2.3.3"
   }
 }
