--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
   },
   "dependencies": {
     "express": "^4.13.4",
-    "morgan": "^1.7.0"
+    "fluent-ffmpeg": "^2.1.0",
+    "formidable": "^1.0.17",
+    "lodash": "^4.13.1",
+    "morgan": "^1.7.0",
+    "multer": "^1.1.0"
   }
 }
