--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "bootstrap": "^3.3.6",
     "angular-file-upload": "^2.3.3",
     "angular-ui-slider": "^0.3.2",
-    "angular-resource": "^1.5.6"
+    "angular-resource": "^1.5.6",
+    "angular-bootstrap": "^1.3.3"
   }
 }
