--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "shelljs": "^0.6.0"
   },
   "scripts": {
-    "prestart": "npm install"
+    "prestart": "npm install && bower install"
     },
   "dependencies": {
     "bower": "^1.7.7",
