--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
   },
   "scripts": {
     "prestart": "npm install && bower install"
-    },
+  },
   "dependencies": {
+    "body-parser": "^1.15.1",
     "bower": "^1.7.7",
     "express": "^4.13.4",
     "fluent-ffmpeg": "^2.1.0",
