--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "angular-seed",
+  "name": "video-frame-tagger",
   "private": true,
   "version": "0.0.0",
   "description": "A starter project for AngularJS",
-  "repository": "https://github.com/angular/angular-seed",
+  "repository": "https://github.com/baskeboler/video-frame-tagger",
   "license": "MIT",
   "devDependencies": {
     "bower": "^1.7.7",
