--- a/bower.json
+++ b/bower.json
@@ -18,5 +18,8 @@
     "angular-ui-slider": "^0.3.2",
     "angular-resource": "^1.5.6",
     "angular-bootstrap": "^1.3.3"
+  },
+  "resolutions": {
+    "angular": "1.5.6"
   }
 }
